# todo-gtk-rs

./: Cargo.toml  README.md  build.rs
src/: main.rs  org.gtk_rs.Todo1.gschema.xml
src/collection_object/: imp.rs  mod.rs
src/resources/: resources.gresource.xml  shortcuts.ui
src/task_object/: imp.rs  mod.rs
src/task_row/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
