[package]
name = "todoApp"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_3"] }
gio = "0.20.7"
glib = "0.20.7"
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_10"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
glib-build-tools = "0.20.0"
